--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.44.2",
     "@tanstack/react-table": "^8.19.2",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.400.0",
