--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.44.2",
     "@tanstack/react-table": "^8.19.2",
