--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.400.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-csv": "^2.2.2",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
     "eslint": "^8",
