--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@hookform/resolvers": "^3.7.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.44.2",
     "@tanstack/react-table": "^8.19.2",
@@ -28,6 +30,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
