--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lucide-react": "^0.400.0",
     "next": "^14.2.13",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-csv": "^2.2.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -44,6 +45,7 @@
     "@types/cors": "^2.8.17",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18",
     "@types/react-modal": "^3.16.3",
