--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@sendgrid/mail": "^8.1.3",
     "@shadcn/ui": "^0.0.4",
     "@supabase/supabase-js": "^2.44.2",
     "@tanstack/react-table": "^8.19.2",
